crates/math-core/src/snapshots/math_core__parser__tests__mathit_func.snap
---
source: crates/math-core/src/parser.rs
expression: "\\mathit{ab \\log cd}"
---
[
  Row(
    nodes: [
      IdentifierStr("𝑎𝑏"),
      Row(
        nodes: [
          IdentifierStr("log"),
          Operator(
            op: "\u{2061}",
            attrs: OpAttrs(""),
            roles: OpRoles("ROLE_INFIX"),
            size: None,
            left: Some(ThreeMu),
            right: None,
          ),
          IdentifierStr("𝑐𝑑"),
        ],
        attrs: RowAttrs(
          color: None,
          style: None,
          math_shift_compact: false,
        ),
      ),
    ],
    attrs: RowAttrs(
      color: None,
      style: None,
      math_shift_compact: false,
    ),
  ),
]
