crates/math-core/src/snapshots/math_core__parser__tests__mathit_greek.snap
---
source: crates/math-core/src/parser.rs
expression: "\\mathit{\\Alpha\\Beta}"
---
[
  IdentifierStr("𝛢𝛣"),
]
