crates/math-core/src/snapshots/math_core__parser__tests__mathrm_mathit_nested.snap
---
source: crates/math-core/src/parser.rs
expression: "\\mathrm{\\mathit{a}b}"
---
[
  Row(
    nodes: [
      IdentifierChar("𝑎", Default),
      IdentifierChar("b", ForcedUpright),
    ],
    attrs: RowAttrs(
      color: None,
      style: None,
      math_shift_compact: false,
      margin_left: None,
    ),
  ),
]
