crates/math-core/src/snapshots/math_core__parser__tests__mathrm_mathit_nested_multi.snap
---
source: crates/math-core/src/parser.rs
expression: "\\mathrm{ab\\mathit{cd}ef}"
---
[
  Row(
    nodes: [
      IdentifierStr("ab"),
      IdentifierStr("𝑐𝑑"),
      IdentifierStr("ef"),
    ],
    attrs: RowAttrs(
      color: None,
      style: None,
      math_shift_compact: false,
      margin_left: None,
    ),
  ),
]
