crates/math-core/src/snapshots/math_core__parser__tests__mathrm_sqrt.snap
---
source: crates/math-core/src/parser.rs
expression: "\\mathrm{\\sqrt xy}"
---
[
  Row(
    nodes: [
      Sqrt(IdentifierChar("x", ForcedUpright)),
      IdentifierChar("y", ForcedUpright),
    ],
    attrs: RowAttrs(
      color: None,
      style: None,
      math_shift_compact: false,
    ),
  ),
]
