crates/math-core/src/snapshots/math_core__parser__tests__mathrm_subscript.snap
---
source: crates/math-core/src/parser.rs
expression: "\\mathrm{x_x y_y}"
---
[
  Row(
    nodes: [
      Sub(
        target: IdentifierChar("x", ForcedUpright),
        symbol: IdentifierChar("x", ForcedUpright),
      ),
      Sub(
        target: IdentifierChar("y", ForcedUpright),
        symbol: IdentifierChar("y", ForcedUpright),
      ),
    ],
    attrs: RowAttrs(
      color: None,
      style: None,
      math_shift_compact: false,
    ),
  ),
]
