crates/math-core/src/snapshots/math_core__parser__tests__mathstrut.snap
---
source: crates/math-core/src/parser.rs
expression: "\\mathstrut"
---
[
  Padded(
    node: Phantom(
      node: Operator(
        op: "(",
        attrs: OpAttrs("STRETCHY_FALSE"),
        roles: OpRoles("ROLE_OPEN"),
        size: None,
        left: None,
        right: None,
      ),
    ),
    width_0: true,
    height_0: false,
    left: None,
    right: None,
    voffset: None,
  ),
]
