crates/math-core/src/snapshots/math_core__parser__tests__matrix.snap
---
source: crates/math-core/src/parser.rs
expression: "\\begin{pmatrix} x \\\\ y \\end{pmatrix}"
---
[
  Row(
    nodes: [
      Operator(
        op: "(",
        attrs: OpAttrs(""),
        roles: OpRoles(""),
        size: None,
        left: None,
        right: None,
      ),
      Table(
        align: Centered,
        style: Some(Text),
        border_top: None,
        content: [
          IdentifierChar("x", Default),
          RowSeparator(
            label_info: None,
            border_top: None,
            shove: None,
          ),
          IdentifierChar("y", Default),
        ],
      ),
      Operator(
        op: ")",
        attrs: OpAttrs(""),
        roles: OpRoles(""),
        size: None,
        left: None,
        right: None,
      ),
    ],
    attrs: RowAttrs(
      color: None,
      style: None,
      math_shift_compact: false,
    ),
  ),
]
